RESOLVED FIXED73249
[chromium] SVG filters don't work with --enable-accelerated-drawing
https://bugs.webkit.org/show_bug.cgi?id=73249
Summary [chromium] SVG filters don't work with --enable-accelerated-drawing
Stephen White
Reported 2011-11-28 14:23:23 PST
Run chrome with --force-compositing-mode --enable-accelerated-drawing. SVG filters content renders blank. See also http://crbug.com/103274.http://crbug.com/103274
Attachments
Patch (8.17 KB, patch)
2011-11-28 14:25 PST, Stephen White
no flags
Patch (8.43 KB, patch)
2011-11-28 14:53 PST, Stephen White
no flags
Stephen White
Comment 1 2011-11-28 14:25:41 PST
Kenneth Russell
Comment 2 2011-11-28 14:36:15 PST
Comment on attachment 116818 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=116818&action=review Looks fine. One minor comment. > Source/WebCore/platform/graphics/skia/PlatformContextSkia.h:184 > + bool isDeferred() const { return m_deferred; } A comment about the meaning of the deferred flag would be helpful.
Stephen White
Comment 3 2011-11-28 14:53:21 PST
Stephen White
Comment 4 2011-11-28 15:02:10 PST
Comment on attachment 116818 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=116818&action=review >> Source/WebCore/platform/graphics/skia/PlatformContextSkia.h:184 >> + bool isDeferred() const { return m_deferred; } > > A comment about the meaning of the deferred flag would be helpful. Good idea; done.
Kenneth Russell
Comment 5 2011-11-28 16:30:24 PST
Comment on attachment 116827 [details] Patch Thanks, looks good.
WebKit Review Bot
Comment 6 2011-11-28 21:15:03 PST
Comment on attachment 116827 [details] Patch Clearing flags on attachment: 116827 Committed r101325: <http://trac.webkit.org/changeset/101325>
WebKit Review Bot
Comment 7 2011-11-28 21:15:07 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.