[chromium] Fix SVG filters when running in accelerated drawing mode. https://bugs.webkit.org/show_bug.cgi?id=73249

Reviewed by Kenneth Russell.

Source/WebCore:

Test: platform/chromium/compositing/accelerated-drawing/svg-filters.html

* platform/graphics/chromium/LayerTextureUpdaterCanvas.cpp:
(WebCore::LayerTextureUpdaterSkPicture::prepareToUpdate):
When doing accelerated drawing, mark the PlatformContextSkia as
deferred.
* platform/graphics/skia/ImageBufferSkia.cpp:
(WebCore::drawNeedsCopy):
When doing a cross-context draw, if the destination context is
deferred, copy the image.  Also refactor conditions under which the
image is copied into a new function.
(WebCore::ImageBuffer::draw):
(WebCore::ImageBuffer::drawPattern):
Use the refactored function for conditional copies.
* platform/graphics/skia/PlatformContextSkia.cpp:
(WebCore::PlatformContextSkia::PlatformContextSkia):
* platform/graphics/skia/PlatformContextSkia.h:
(WebCore::PlatformContextSkia::isDeferred):
(WebCore::PlatformContextSkia::setDeferred):
Add m_isDeferred flag, initializer and accessors.

LayoutTests:

* platform/chromium/compositing/accelerated-drawing/svg-filters.html: Added.
New test to check SVG filters in accelerated drawing.
* platform/chromium/test_expectations.txt:
Suppress test failures for new test until we get baselines.


Canonical link: https://commits.webkit.org/89806@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101325 268f45cc-cd09-0410-ab3c-d52691b4dbfc